--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/home.css">
     <link rel="shortcut icon" href="img/logo.svg">
     <script defer src="script/script.js"></script>
-    <title>Läleony</title>
+    <title>Läleony Hotel & Resort</title>
 </head>
 <body onscroll="scrollNav()" onload="showSlides()">
     <div class="navbar" id="navbar">
